--- a/templates/CG/stage.html
+++ b/templates/CG/stage.html
@@ -257,7 +257,7 @@
             color: #555;
             border: 1px solid #aaa;
             outline: 1px solid transparent;
-            backgroun: #fff;
+            background: #fff;
             border-radius: 3px;
         }
 
