--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -38,7 +38,7 @@
 
 <div class="container box item-center">
     <i class="fas fa-check"></i>
-    <h2>Password Successfully Changed !!</h2>
+    <h2>Password Successfully Changed !!!</h2>
 <br><br>
     <a class="btn sub-btn" href="{% url 'login' %}">Login <i class="fas fa-plane-arrival"></i></a>
         
