--- a/templates/feed360/createform.html
+++ b/templates/feed360/createform.html
@@ -18,7 +18,7 @@
     }
 
     body {
-        background-color: var(--background);
+        background-color: #ffa10150;
         font-family: 'Inter', sans-serif;
         color: var(--text);
         line-height: 1.6;
